# expo-nitro-module

./: app.json  nitro.json  package-lock.json  package.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: cpp-adapter.cpp
android/app/src/main/java/com/frankcalise/exponitromodule/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/(tabs)/: index.tsx
cpp/: NitroExample.cpp  NitroExample.hpp
ios/: Podfile
ios/exponitromodule/: Info.plist
ios/exponitromodule.xcodeproj/: project.pbxproj
ios/exponitromodule.xcodeproj/xcshareddata/xcschemes/: exponitromodule.xcscheme
ios/exponitromodule.xcworkspace/: contents.xcworkspacedata
specs/: Math.nitro.ts
